--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="container">
-            <div class="header-wrap">
+            <div class="header-wrap ">
                 <div class="header-logo">
                     <p>ToDo</p>
                 </div>
@@ -23,67 +23,129 @@
     </header>
     <main>
         <div class="container">
-            <div class="main-wrap">
+            <div class="main-wrap ">
                 <div class="main-columns">
                     <div class="column-make-todo">
                         <h3>Make ToDo</h3>
                         <div>
                             <a><i class="fa-solid fa-plus"></i></a>
-                            <a><i class="fa-sharp fa-solid fa-trash"></i></a>
+                            <a class="delete-task--make-todo"><i class="fa-sharp fa-solid fa-trash"></i></a>
                         </div>
                     </div>
                     <div class="column-total">
                         <p>Total:</p>
-                        <p>1</p>
+                        <p class="total-make-todo">0</p>
                     </div>
                     <div class="column-list">
-                        <ul class="column-list--main">
-                            <li class="">привет</li>
+                        <ul class="column-list--maketodo">
+                            <!-- <li class="column-list-out">
+                                <div class="column-list--title">
+                                    <span>ToDo</span>
+                                    <p>Data</p>
+                                </div>
+                                <div class="column-description">
+                                    <output class="column-description--title">Заголовок 1</output>
+                                    <output class="column-description--desc">Description</output>
+                                </div>
+                                <div class="column-author--main">
+                                    <output class="column-author">Author</output>
+                                    <div>
+                                        <button class="inprogress">IN PROGRESS</button>
+                                        <a class="delete-task--card"><i class="fa-sharp fa-solid fa-trash"></i></a>
+                                    </div>
+
+
+                                </div>
+                            </li> -->
                         </ul>
                     </div>
                 </div>
                 <div class="main-columns">
                     <div class="column-make-todo">
-                        <h3>Make ToDo</h3>
+                        <h3>In Progress</h3>
                         <div>
-                            <a><i class="fa-sharp fa-solid fa-trash"></i></a>
+                            <a class="delete-task--inprogress"><i class="fa-sharp fa-solid fa-trash"></i></a>
                         </div>
                     </div>
                     <div class="column-total">
                         <p>Total:</p>
-                        <p>1</p>
+                        <p class="total-progress">0</p>
                     </div>
 
-                    <ul class="column-list">
-                        <li class="">привет</li>
-                    </ul>
+                    <div class="column-list">
+                        <ul class="column-list--in-progress">
+                            <!-- <li class="column-list-out">
+                                <div class="column-list--title">
+                                    <span>ToDo</span>
+                                    <p>Data</p>
+                                </div>
+                                <div class="column-description">
+                                    <output class="column-description--title">Заголовок 1</output>
+                                    <output class="column-description--desc">Description</output>
+                                </div>
+                                <div class="column-author--main">
+                                    <output class="column-author">Author</output>
+                                    <div>
+                                        <button class="indone">IN DONE</button>
+                                        <a class="delete-task--card"><i class="fa-sharp fa-solid fa-trash"></i></a>
+                                    </div>
+
+
+                                </div>
+                            </li> -->
+                        </ul>
+                    </div>
 
                 </div>
                 <div class="main-columns">
                     <div class="column-make-todo">
-                        <h3>Make ToDo</h3>
+                        <h3>Done</h3>
                         <div>
-                            <a><i class="fa-sharp fa-solid fa-trash"></i></a>
+                            <a class="delete-task"><i class="fa-sharp fa-solid fa-trash"></i></a>
 
                         </div>
                     </div>
                     <div class="column-total">
                         <p>Total:</p>
-                        <p>1</p>
+                        <p class="total-done">0</p>
                     </div>
                     <div class="column-list">
                         <ul class="column-list--main">
-                            <li class="">привет</li>
                         </ul>
                     </div>
                 </div>
 
             </div>
         </div>
+        <div class="popup ">
+            <form class="form" action="">
+                <div class="form-title">
+                    <h3>Нужно ввести что-то</h3>
+                    <i class="fa-solid fa-circle-xmark"></i>
+                </div>
+
+                <div>
+                    <p class="form-input--name">Title:</p>
+                    <input class="form-input-title" type="text" id="">
+                </div>
+                <div>
+                    <p class="form-input--name">Description:</p>
+                    <textarea class="form-description"></textarea>
+                </div>
+                <div>
+                    <input class="form-author" placeholder="Автор" type="text" id="">
+                </div>
+
+                <div class="form-buttons">
+                    <button class="form-button form-create" type="submit">Create</button>
+                    <button class="form-button form-cancel" type="reset">Cancel</button>
+                </div>
+            </form>
+        </div>
     </main>
 
 
-    <script type="module" src="./js/index.js"></script>
+    <script type="module" src="./js/idexes.js"></script>
 </body>
 
 </html>
